# when-metrics-lie

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_PLAN.md  Dockerfile  LICENSE  PHASE1README.md  PHASE_4B_SETUP.md  PHASE_4_COMPLETE.md  PHASE_4_RUNBOOK.md  README.md  REFACTOR_PLAN.md  RELEASE.md  STATUS.md  alembic.ini  mkdocs.yml  narrativeREADME.md  noxfile.py  pyproject.toml  score_report.json
.claude/: settings.local.json
.claude/plans/: phase5-stream-a-backend.md  phase5-stream-b-frontend.md  phase5-stream-c-tests.md  phase6-stream-a-mlflow.md  phase6-stream-b-kserve.md  phase6-stream-c-mkdocs.md  phase6-stream-d-tests.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_adapter.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1e8f3e64b284_init_db.py  2a4add_spec_json_and_rerun_of.py  621e2c45932b_add_jobs_table.py
data/: demo_binary.csv  demo_binary_label_noise.csv  demo_model.pkl  demo_with_features.csv  iris_model.pkl  iris_multiclass.csv  regression_model.pkl  regression_sample.csv
docs/: cli-reference.md  concepts.md  contributing.md  getting-started.md  index.md
docs/api-reference/: result-bundle.md  sdk.md  spec.md
docs/integrations/: mlflow.md  model-formats.md
docs/plans/: 2026-02-26-v1-phase1-universal-model-adapter.md  2026-02-26-v1-phase2-multi-task-metrics-scenarios.md  2026-02-27-v1-phase3-diagnostics-analysis-generalization.md  2026-02-27-v1-phase4-sdk-cli-upgrade.md  2026-03-05-open-source-release-design.md  2026-03-05-phase5-web-upgrade-design.md  2026-03-05-phase6-production-integrations-design.md  2026-03-05-quick-test-ui.md  2026-03-05-v1-completion-plan.md
examples/: __init__.py  demo_model.py  experiment_minimal.json  experiment_model_inference.json  experiment_surface_label.json  experiment_surface_score.json
examples/data/: surface_label.csv  surface_score.csv
src/metrics_lie/: __init__.py  builders.py  catalog.py  cli.py  cli_app.py  cli_format.py  contract_check.py  display.py  execution.py  presets.py  runner.py  schema.py  sdk.py  spec.py  surface_compat.py  task_types.py  validation.py  worker.py
src/metrics_lie/analysis/: __init__.py  dashboard.py  disagreement.py  failure_modes.py  sensitivity.py  threshold_sweep.py
src/metrics_lie/artifacts/: __init__.py  plots.py
src/metrics_lie/compare/: compare.py  loader.py  rules.py
src/metrics_lie/datasets/: loaders.py
src/metrics_lie/db/: crud.py  models.py  session.py
src/metrics_lie/decision/: __init__.py  components.py  extract.py  score.py  scorecard.py
src/metrics_lie/diagnostics/: __init__.py  calibration.py  drift.py  fairness.py  metric_gaming.py  subgroups.py
src/metrics_lie/experiments/: datasets.py  definition.py  identity.py  registry.py  runs.py
src/metrics_lie/integrations/: __init__.py  mlflow.py
src/metrics_lie/metrics/: applicability.py  core.py  nlp.py  registry.py
src/metrics_lie/model/: __init__.py  adapter.py  adapter_registry.py  default_registry.py  errors.py  metadata.py  protocol.py  security.py  sources.py  surface.py
supabase/migrations/: 001_phase6_schema.sql
tests/: conftest.py  test14_phase_registry.py  test15_calibration_diagnostics.py  test16_subgroup_diagnostics.py  test17_artifacts.py  test18_metric_gaming.py  test21_experiment_identity.py  test23_compare_runs.py  test24_rerun.py  test25_jobs_worker.py  test26_db_queries.py  test27_profiles.py  test28_decision_components.py  test29_scorecard.py  test30_cli_entrypoint.py  test31_version_flag.py  test32_model_adapter.py  test33_metric_applicability.py  test34_analysis.py  test35_mvs_integration.py  test_cli_serve.py  test_contracts.py  test_milestone2_helpers.py  test_milestone3_golden.py  test_milestone4_bundle_transform.py  test_phase13_baseline.py  test_phase5_bundle_transform.py  test_phase5_contracts.py  test_phase5_engine_bridge.py  test_phase5_model_validation.py  test_phase5_presets.py  test_phase6_kserve.py  test_phase6_mlflow_adapter.py  test_phase6_mlflow_logging.py  test_phase6_registry.py  test_phase7_compare_flags.py  test_phase7_determinism.py  test_phase7_share.py  test_phase8_compare_multi.py  test_phase8_dashboard.py  (+61 more)
tests/golden/: phase4_minimal_golden.json
web/: README.md
web/backend/: README.md  demo_seed.py  verify_phase3_2.py
web/backend/app/: auth.py  (+12 more)
web/frontend/: README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+59 files in other folders)
