[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics_lie"
version = "0.1.0"
description = "When Metrics Lie engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.3"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


