[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics_lie"
version = "0.2.0"
description = "When Metrics Lie engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "typer>=0.9",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.3",
  "requests>=2.31.0"
]
web = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "requests>=2.31.0"
]
onnx = [
  "onnxruntime>=1.16",
  "skl2onnx>=1.16"
]
boosting = [
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2"
]
fairness = [
  "fairlearn>=0.10"
]
drift = [
  "evidently>=0.4"
]
all = [
  "metrics_lie[dev,web,onnx,boosting,fairness,drift]"
]

[project.scripts]
spectra = "metrics_lie.cli_app:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test*.py"]


