[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-ml"
version = "1.0.0"
description = "Scenario-first ML evaluation engine — stress-test your models to find where metrics lie"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "Spectra Contributors"}
]
keywords = [
  "machine-learning", "evaluation", "testing", "metrics",
  "stress-testing", "model-validation", "ml-ops", "fairness",
  "calibration", "scikit-learn"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "typer>=0.9",
  "rich>=13.0"
]

[project.urls]
Homepage = "https://github.com/StrangeStorm243-bit/when-metrics-lie"
Documentation = "https://strangestorm243-bit.github.io/when-metrics-lie/"
Repository = "https://github.com/StrangeStorm243-bit/when-metrics-lie"
Issues = "https://github.com/StrangeStorm243-bit/when-metrics-lie/issues"
Changelog = "https://github.com/StrangeStorm243-bit/when-metrics-lie/releases"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.3",
  "requests>=2.31.0"
]
web = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "requests>=2.31.0"
]
onnx = [
  "onnxruntime>=1.16",
  "skl2onnx>=1.16"
]
boosting = [
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2"
]
fairness = [
  "fairlearn>=0.10"
]
drift = [
  "evidently>=0.4"
]
security = [
  "picklescan>=0.0.14",
]
mlflow = [
  "mlflow>=2.10"
]
metrics = [
  "evaluate>=0.4",
  "rouge-score>=0.1"
]
pytorch = [
  "torch>=2.0"
]
tensorflow = [
  "tensorflow>=2.15"
]
huggingface = [
  "transformers>=4.35",
  "safetensors"
]
docs = [
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24"
]
all = [
  "spectra-ml[dev,web,onnx,boosting,fairness,drift,security,mlflow,metrics,pytorch,tensorflow,huggingface,docs]"
]

[project.scripts]
spectra = "metrics_lie.cli_app:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test*.py"]


